tests/warn/param-allow.jo
def foo() = println "foo"                     // inferred capability: stdout
def bar() = foo()                             // inferred capability: stdout

def baz() = println "baz"                     // inferred capability: stdout

def qux() receives IO.stdout = println "qux"  // explicit capability: stdout

def main =
  allow none in bar()                  // error
  allow IO.stdout in baz()             // OK
  with IO.stdout = s => pass in qux()  // ignore output
